--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
-name: gnu-poke # you probably want to 'snapcraft register <name>'
+name: poke # you probably want to 'snapcraft register <name>'
 base: core20 # the base snap is the execution environment for this snap
-version: '0.1-beta' # just for humans, typically '1.2+git' or '1.3.2'
+#version: '0.1-beta+git' # just for humans, typically '1.2+git' or '1.3.2'
 summary: GNU Poke Binary Editor # 79 char long summary
 description: |
   GNU poke is an interactive, extensible editor for binary data. Not limited
@@ -12,35 +12,56 @@ description: |
 grade: devel # must be 'stable' to release into candidate/stable channels
 confinement: strict # use 'strict' once you have the right plugs and slots
 license: GPL-3.0
+adopt-info: gnu-poke
 
 # icon: 
 
 layout:
   /usr/share/poke:
     symlink: $SNAP/usr/share/poke
-  /usr/bin/poke:
-    symlink: $SNAP/usr/bin/poke
-  /usr/bin/poke-gui:
-    symlink: $SNAP/usr/bin/poke-gui
+  /usr/share/tcltk:
+    symlink: $SNAP/usr/share/tcltk
+  
+
+plugs:
+  dot-files:
+    interface: personal-files
+    write:
+      - $HOME/.config/poke
+      - $HOME/.pokerc
+      - $HOME/.poke_history
 
 apps:
   poke:
     command: usr/bin/poke
-    plugs: [network, network-bind]
-  # TODO: Figure out why the gui doesn't think it can find tcl8.6/init.tcl
+    command-chain: symlink-configs.sh
+    plugs: 
+      - dot-files
+      - home
+      - network
+      - network-bind
+
   poke-gui:
+    command-chain: symlink-configs.sh
     command: usr/bin/poke-gui
+    # TODO: Write a .desktop file.
     #desktop: <tbd usr/share/applications/poke-gui.desktop>
-    plugs: [desktop, desktop-legacy, wayland, x11, network, network-bind]
-    #plugs: [cups-control, home]
+    plugs:
+      - dot-files
+      - home
+      - network
+      - network-bind
+      - desktop
+      - wayland
+      - x11
   pk-elfextractor:
     command: usr/bin/pk-elfextractor
     # Needs a patch
 
 
+# export SNAPCRAFT_BUILD_ENVIRONMENT_CPU=16
 parts:
-  poke:
-    # export SNAPCRAFT_BUILD_ENVIRONMENT_CPU=16
+  gnu-poke:
     # git clone git://git.savannah.gnu.org/poke.git --recurse-submodules -j8
     # git submodule update --init --recursive
     source: poke/
@@ -63,9 +84,11 @@ parts:
       - gawk
     stage-packages:
       - libgc1c2
-      - tk
       - libnbd0
-      - libtcl8.6
+      - libjson-c4
+      - tk # for the GUI
+      - libtcl8.6 # for the GUI
+      - tcllib # for json in the GUI
     after: [gettext, bison]
     # sure would be nice if the poke project bootstrap.conf respected
     # non-default paths. Also, snapcraft only recently got ./bootstrap support,
@@ -73,13 +96,17 @@ parts:
     # One is an upstream bug, another is a downstream feture request.
     # TODO: figure out why snapcraftctl doesn't do anything here.
     override-build: |
-      echo "Setting version to '${SNAPCRAFT_PROJECT_VERSION}-$(git log -n1 --format=%cs_%h)'"
-      snapcraftctl set-version "${SNAPCRAFT_PROJECT_VERSION}-$(git log -n1 --format=%cs_%h)"
-      ./bootstrap --gnulib-srcdir=gnulib --jitter-srcdir=jitter --no-git --skip-po
-      ./configure --prefix=/usr
+      ./bootstrap --gnulib-srcdir=gnulib --jitter-srcdir=jitter --no-git
+      ./configure --prefix=/usr --enable-gui --enable-mi
+      export MAKEINFOFLAGS="--css-ref=http://www.jemarch.net/homepage.css"
       make -j"${SNAPCRAFT_PARALLEL_BUILD_COUNT}"
       make install DESTDIR="${SNAPCRAFT_PART_INSTALL}"
-#      sudo ldconfig
+      make install-html DESTDIR="${SNAPCRAFT_PART_INSTALL}" || true
+      make install-pdf DESTDIR="${SNAPCRAFT_PART_INSTALL}" || true
+      echo "Setting version to '0.1-beta+git-$(git log -n1 --format=%cs-%h)'"
+      snapcraftctl set-version "0.1-beta+git-$(git log -n1 --format=%cs-%h)"
+    # as of 2020-02-14 the /po sub-child of install-pdf is expected to fail,
+    # so I trap the failure and say screw it.
 
   bison:
     #source: http://ftp.gnu.org/gnu/bison/bison-3.7.5.tar.xz
