--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: poke # you probably want to 'snapcraft register <name>'
 base: core20 # the base snap is the execution environment for this snap
-#version: '0.1-beta+git' # just for humans, typically '1.2+git' or '1.3.2'
+version: '0.9' # just for humans, typically '1.2+git' or '1.3.2'
 summary: GNU Poke Binary Editor # 79 char long summary
 description: |
   GNU poke is an interactive, extensible editor for binary data. Not limited
@@ -15,7 +15,7 @@ assumes:
 grade: devel # must be 'stable' to release into candidate/stable channels
 confinement: strict # use 'strict' once you have the right plugs and slots
 license: GPL-3.0
-adopt-info: gnu-poke
+#adopt-info: gnu-poke
 
 
 # icon:
@@ -75,8 +75,9 @@ parts:
   gnu-poke:
     # git clone git://git.savannah.gnu.org/poke.git --recurse-submodules -j8
     # git submodule update --init --recursive
-    source: poke_source/
-    #source: git://git.savannah.gnu.org/poke.git
+    #source: poke_source/
+    source: git://git.savannah.gnu.org/poke.git
+    source-tag: releases/poke-0.90
     #  git submodule update --init --recursive
     plugin: autotools
     build-packages:
@@ -114,14 +115,14 @@ parts:
       make install DESTDIR="${SNAPCRAFT_PART_INSTALL}"
       make install-html DESTDIR="${SNAPCRAFT_PART_INSTALL}" || true
       make install-pdf DESTDIR="${SNAPCRAFT_PART_INSTALL}" || true
-      echo "Setting version to '0.1-beta+git-$(git log -n1 --format=%cs-%h)'"
-      snapcraftctl set-version "0.1-beta+git-$(git log -n1 --format=%cs-%h)"
+    #  echo "Setting version to '0.1-beta+git-$(git log -n1 --format=%cs-%h)'"
+    #  snapcraftctl set-version "0.1-beta+git-$(git log -n1 --format=%cs-%h)"
     # as of 2020-02-14 the /po sub-child of install-pdf is expected to fail,
     # so I trap the failure and say screw it.
 
   bison:
-    #source: http://ftp.gnu.org/gnu/bison/bison-3.7.5.tar.xz
-    source: bison-3.7.5_source.tar.xz
+    source: http://ftp.gnu.org/gnu/bison/bison-3.7.5.tar.xz
+    #source: bison-3.7.5_source.tar.xz
     plugin: autotools
     autotools-configure-parameters:
       # move from /usr/local to /usr so the later build steps find the tool
@@ -132,8 +133,8 @@ parts:
       # put none of these files into the final snap.
       - -*
   gettext:
-    #source: https://ftp.gnu.org/pub/gnu/gettext/gettext-0.21.tar.gz
-    source: gettext-0.21_source.tar.gz
+    source: https://ftp.gnu.org/pub/gnu/gettext/gettext-0.21.tar.gz
+    #source: gettext-0.21_source.tar.gz
     plugin: autotools
     autotools-configure-parameters:
       # move from /usr/local to /usr so the later build steps find the tool
