Hide errors, and reduce arch space.

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -17,6 +17,13 @@ confinement: strict # use 'strict' once you have the right plugs and slots
 license: GPL-3.0
 #adopt-info: gnu-poke
 
+# Limit the build impact. I want this thing on my Pi's and my Desktops
+# TODO: why doesn't i386 work?
+architectures:
+  - build-on: arm64
+  - build-on: armhf
+  - build-on: amd64
+  - build-on: i386
 
 # icon:
 
