--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: poke # you probably want to 'snapcraft register <name>'
 base: core20 # the base snap is the execution environment for this snap
-version: '0.9' # just for humans, typically '1.2+git' or '1.3.2'
+version: '0.91' # just for humans, typically '1.2+git' or '1.3.2'
 summary: GNU Poke Binary Editor # 79 char long summary
 description: |
   GNU poke is an interactive, extensible editor for binary data. Not limited
@@ -23,7 +23,7 @@ architectures:
   - build-on: arm64
   - build-on: armhf
   - build-on: amd64
-#  - build-on: i386
+  - build-on: i386
 
 # icon:
 
@@ -46,26 +46,26 @@ plugs:
 apps:
   poke:
     command: usr/bin/poke
-    command-chain: [bin/symlink-configs.sh]
+#    command-chain: [bin/symlink-configs.sh]
     plugs:
-      - dot-files
       - home
       - network
       - network-bind
+#      - dot-files
 
   poke-gui:
     command: usr/bin/poke-gui
-    command-chain: [bin/symlink-configs.sh]
+#    command-chain: [bin/symlink-configs.sh]
     # TODO: Write a .desktop file.
     #desktop: <tbd usr/share/applications/poke-gui.desktop>
     plugs:
-      - dot-files
       - home
       - network
       - network-bind
       - desktop
       - wayland
       - x11
+#      - dot-files
   pk-elfextractor:
     command: usr/bin/pk-elfextractor
     # Needs a patch
@@ -84,7 +84,7 @@ parts:
     # git submodule update --init --recursive
     #source: poke_source/
     source: git://git.savannah.gnu.org/poke.git
-    source-tag: releases/poke-0.90
+    source-tag: releases/poke-0.91
     #  git submodule update --init --recursive
     plugin: autotools
     build-packages:
