--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: poke # you probably want to 'snapcraft register <name>'
 base: core20 # the base snap is the execution environment for this snap
-version: '0.91' # just for humans, typically '1.2+git' or '1.3.2'
+version: '1.0-testing' # just for humans, typically '1.2+git' or '1.3.2'
 summary: GNU Poke Binary Editor # 79 char long summary
 description: |
   GNU poke is an interactive, extensible editor for binary data. Not limited
@@ -84,7 +84,7 @@ parts:
     # git submodule update --init --recursive
     #source: poke_source/
     source: git://git.savannah.gnu.org/poke.git
-    source-tag: releases/poke-0.91
+    source-tag: releases/poke-1.0
     #  git submodule update --init --recursive
     plugin: autotools
     build-packages:
